--- a/index.html
+++ b/index.html
@@ -2,16 +2,35 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Assignment 2 - Md Sakiluzzaman</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link href="https://fonts.googleapis.com/css?family=Work Sans" rel="stylesheet" />
 
+    <title>Assignment 2 - Md Sakiluzzaman</title>
 </head>
 
 <body>
-
+    <header class="header">
+        <div class="container">
+            <div class="container-body">
+                <nav>
+                    <div class="nav-left">G3 Architects</div>
+                    <div class="nav-right">
+                        <ul>
+                            <li>Home</li>
+                            <li>About</li>
+                            <li>Contact Us</li>
+                            <li>Login</li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 
 </html>
