--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
                         </ul>
                     </div>
                 </nav>
+                <!-- title section -->
+                <section class="header-section">
+                    <div class="header-text">
+                        <div class="header-title">
+                            <span>Brand New</span><br /> Group of Architects
+                        </div>
+                        <div class="header-sub-texts">
+                            <span>There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in</span> some form, by injected humour, or randomised words which don't look even
+                        </div>
+                    </div>
+                </section>-
+                <div class="header-button">
+                    <button>Explore More</button>
+                </div>
+                </section>
             </div>
         </div>
     </header>
