--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
                         </div>
                         <div class="header-sub-texts">
                             <span>There are many variations of passages of Lorem Ipsum
-                  available, but the majority have suffered alteration in</span> some form, by injected humour, or randomised words which don't look even
-                        </div>
+                  available, but the majority have suffered alteration in</span> some form, by injected humour, or randomised words which don't look even</div>
                     </div>
-                </section>-
+                </section>
                 <div class="header-button">
                     <button>Explore More</button>
+                </div>
+                <div class="header-image">
+                    <!-- <img src="./images/banner.png"> -->
                 </div>
                 </section>
             </div>
