--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div>
                 </nav>
                 <!-- title section -->
-                <section class="header-section">
+                <div class="header-section">
                     <div class="header-text">
                         <div class="header-title">
                             <span>Brand New</span><br /> Group of Architects
@@ -36,7 +36,7 @@
                             <span>There are many variations of passages of Lorem Ipsum
                   available, but the majority have suffered alteration in</span> some form, by injected humour, or randomised words which don't look even</div>
                     </div>
-                </section>
+                </div>
                 <div class="header-button">
                     <button>Explore More</button>
                 </div>
@@ -47,7 +47,28 @@
             </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        <!-- Quick list section  -->
+
+        <section>
+            <div class="container">
+                <div class="container-body">
+                    <div class="quick-list">
+                        <div class="quicklist-photos">
+                            <div class="feature-images-container">
+                                <div class="feature-images one"></div>
+                                <div class="feature-images two"></div>
+                                <div class="feature-images three"></div>
+                                <div class="feature-images four"></div>
+                            </div>
+                        </div>
+                        <div class="quicklist-texts">texts</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
     <footer></footer>
 </body>
 
