features section some progress done

--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
     </header>
     <main>
         <!-- Quick list section  -->
-
         <section>
             <div class="container">
                 <div class="container-body">
@@ -67,6 +66,26 @@
                 </div>
             </div>
         </section>
+        <!-- Features Sections -->
+        <section>
+            <div class="container">
+                <div class="container-body">
+                    <div class="feature-container">
+                        <div class="feature-section">
+                            feature
+                        </div>
+                        <div class="image-section">
+                            <div class="feature-button">
+                                <div>
+                                    <span>10+Year </span>
+                                    <br> Experience
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+        </section>
+
 
     </main>
     <footer></footer>
