--- a/index.html
+++ b/index.html
@@ -72,8 +72,33 @@
                 <div class="container-body">
                     <div class="feature-container">
                         <div class="feature-section">
-                            feature
+                            <div class="feature-title"><span>Features you will</span><br><span>love & enjoy</span></div>
+                            <div class="feature-text">
+                                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                            </div>
+                            <div class="feature-card">
+                                <div class="card-title">Dexktop & Mobile Version
+                                </div>
+                                <div class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</div>
+                            </div>
+                            <div class="feature-card">
+                                <div class="card-title">Dexktop & Mobile Version
+                                </div>
+                                <div class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</div>
+                            </div>
+                            <div class="feature-card">
+                                <div class="card-title">Dexktop & Mobile Version
+                                </div>
+                                <div class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</div>
+                            </div>
+                            <div class="feature-card">
+                                <div class="card-title">Dexktop & Mobile Version
+                                </div>
+                                <div class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</div>
+                            </div>
+
                         </div>
+
                         <div class="image-section">
                             <div class="feature-button">
                                 <div>
@@ -83,6 +108,7 @@
                                 </div>
                             </div>
                         </div>
+
                     </div>
         </section>
 
