--- a/index.html
+++ b/index.html
@@ -112,6 +112,57 @@
                     </div>
         </section>
 
+        <!-- Facts Section  -->
+        <section>
+            <div class="container">
+                <div class="container-body">
+                    <div class="facts-container">
+                        <div class="facts-section">
+                            <div class="facts-title">Some Facts</div>
+                            <div class="facts-text">
+                                <span>There are many variations of passages of Lorem Ipsum available, but </span><br>the majority have suffered alteration. </div>
+                        </div>
+
+
+                        <div class="facts">
+                            <div class="section">
+                                <div class="section-icon">
+                                    <img src="./images/icons/ribon.png" alt="banner1" />
+
+                                </div>
+                                <div class="section-header">54</div>
+                                <div class="section-text">Awards Winning</div>
+                            </div>
+                            <div class="section">
+                                <div class="section-icon">
+                                    <img src="./images/icons/projects.png" alt="banner1" />
+                                </div>
+                                <div class="section-header">1457</div>
+                                <div class="section-text">Project Finished</div>
+                            </div>
+                            <div class="section">
+                                <div class="section-icon">
+                                    <img src="./images/icons/customers.png" alt="banner1" />
+
+                                </div>
+                                <div class="section-header">590</div>
+                                <div class="section-text">Clients Worked</div>
+                            </div>
+                            <div class="section">
+                                <div class="section-icon">
+                                    <img src="./images/icons/email.png" alt="banner1" />
+
+                                </div>
+                                <div class="section-header">22578</div>
+                                <div class="section-text">Email Send</div>
+                            </div>
+                        </div>
+
+
+                    </div>
+
+        </section>
+
 
     </main>
     <footer></footer>
