--- a/index.html
+++ b/index.html
@@ -162,6 +162,31 @@
                     </div>
 
         </section>
+        <!-- Sponsors Section -->
+        <section>
+            <div class="container">
+                <div class="container-body">
+                    <div class="sponsor-container">
+                        <div class="title-section">
+                            <div class="title">Some Facts</div>
+                            <div class="text">
+                                <span>There are many variations of passages of Lorem Ipsum available, but </span><br><span>the majority have suffered alteration.</span> </div>
+                        </div>
+                        <div class="logos">
+                            <img src="./images/sponsors/amazon.png" alt="">
+                            <img src="./images/sponsors/figma.png" alt="">
+                            <img src="./images/sponsors/google.png" alt="">
+                            <img src="./images/sponsors/spotify.png" alt="">
+                            <img src="./images/sponsors/telerama.png" alt="">
+                        </div>
+
+
+
+
+
+                    </div>
+
+        </section>
 
 
     </main>
