sponsors portion done

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <div class="container-body">
                     <div class="sponsor-container">
                         <div class="title-section">
-                            <div class="title">Some Facts</div>
+                            <div class="title">Our Sponspors</div>
                             <div class="text">
                                 <span>There are many variations of passages of Lorem Ipsum available, but </span><br><span>the majority have suffered alteration.</span> </div>
                         </div>
