--- a/index.html
+++ b/index.html
@@ -190,7 +190,13 @@
 
 
     </main>
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div class="container-body">
+                <div class="footer">All rights reserved copyright@2023 startup landing page design</div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
