--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
                                 <div class="feature-images four"></div>
                             </div>
                         </div>
-                        <div class="quicklist-texts">texts</div>
+                        <div class="quick-list-texts">
+                            <div class="title">Quick list of Our Features</div>
+                            <div class="text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</div>
+                            <div class="">
+                                <button>Explore More</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
