--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             </div>
                         </div>
                         <div class="quick-list-texts">
-                            <div class="title">Quick list of Our Features</div>
+                            <div class="title"><span class="normal">Quick list </span><span class="bold">of Our <span class="orange">Features</span></div>
                             <div class="text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</div>
                             <div class="">
                                 <button>Explore More</button>
