--- a/index.html
+++ b/index.html
@@ -195,6 +195,34 @@
         </section>
 
 
+
+        <!-- Clients Portion -->
+        <section>
+            <div class="container">
+                <div class="container-body">
+                    <div class="sponsor-container">
+                        <div class="title-section">
+                            <div class="title">Our Clients</div>
+                            <div class="text">
+                                <span>There are many variations of passages of Lorem Ipsum available, but </span><br><span>the majority have suffered alteration.</span> </div>
+                        </div>
+                        <div class="clients">
+                            <img src="./images/clients/abc.png" alt="">
+                            <img src="./images/clients/anwar.png" alt="">
+                            <img src="./images/clients/bdg.png" alt="">
+                            <img src="./images/clients/nokshi.png" alt="">
+                            <img src="./images/clients/shanta.png" alt="">
+                        </div>
+
+
+
+
+
+                    </div>
+
+        </section>
+
+
     </main>
     <footer>
         <div class="container">
