--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="responsive.css" />
+
     <link href="https://fonts.googleapis.com/css?family=Work Sans" rel="stylesheet" />
 
     <title>Assignment 2 - Md Sakiluzzaman</title>
@@ -73,7 +75,7 @@
             </div>
         </section>
         <!-- Features Sections -->
-        <section>
+        <!-- <section>
             <div class="container">
                 <div class="container-body">
                     <div class="feature-container">
@@ -116,7 +118,7 @@
                         </div>
 
                     </div>
-        </section>
+        </section> -->
 
         <!-- Facts Section  -->
         <section>
@@ -126,7 +128,7 @@
                         <div class="facts-section">
                             <div class="facts-title">Some Facts</div>
                             <div class="facts-text">
-                                <span>There are many variations of passages of Lorem Ipsum available, but </span><br>the majority have suffered alteration. </div>
+                                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration. </div>
                         </div>
 
 
@@ -176,7 +178,7 @@
                         <div class="title-section">
                             <div class="title">Our Sponspors</div>
                             <div class="text">
-                                <span>There are many variations of passages of Lorem Ipsum available, but </span><br><span>the majority have suffered alteration.</span> </div>
+                                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration. </div>
                         </div>
                         <div class="logos">
                             <img src="./images/sponsors/amazon.png" alt="">
@@ -199,7 +201,7 @@
                         <div class="title-section">
                             <div class="title">Our Clients</div>
                             <div class="text">
-                                <span>There are many variations of passages of Lorem Ipsum available, but </span><br><span>the majority have suffered alteration.</span> </div>
+                                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration. </div>
                         </div>
                         <div class="clients">
                             <img src="./images/clients/abc.png" alt="">
