--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </header>
     <main>
         <!-- Quick list section  -->
-        <section>
+        <!-- <section>
             <div class="container">
                 <div class="container-body">
                     <div class="quick-list">
@@ -73,7 +73,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Features Sections -->
         <!-- <section>
             <div class="container">
