--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </header>
     <main>
         <!-- Quick list section  -->
-        <!-- <section>
+        <section>
             <div class="container">
                 <div class="container-body">
                     <div class="quick-list">
@@ -64,16 +64,16 @@
                             </div>
                         </div>
                         <div class="quick-list-texts">
-                            <div class="title"><span class="normal">Quick list </span><span class="bold">of Our <span class="orange">Features</span></div>
-                            <div class="text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</div>
-                            <div class="">
+                            <div class="quick-list-title"><span class="normal">Quick list </span><span class="bold">of Our <span class="orange">Features</span></div>
+                            <div class="quick-list-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</div>
+                            <div class="quick-list-button">
                                 <button>Explore More</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!-- Features Sections -->
         <!-- <section>
             <div class="container">
