--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
             </div>
         </section>
         <!-- Features Sections -->
-        <!-- <section>
+        <section>
             <div class="container">
                 <div class="container-body">
                     <div class="feature-container">
                         <div class="feature-section">
-                            <div class="feature-title"><span>Features you will</span><br><span>love & enjoy</span></div>
+                            <div class="feature-title">Features you will love & enjoy</div>
                             <div class="feature-text">
                                 There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
                             </div>
@@ -118,7 +118,7 @@
                         </div>
 
                     </div>
-        </section> -->
+        </section>
 
         <!-- Facts Section  -->
         <section>
