--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <span>Brand New</span><br /> Group of Architects
                         </div>
                         <div class="header-sub-texts">
-                            <span>There are many variations of passages of Lorem Ipsum
+                            <span>There are many variations of passages of Meil mpruo
                   available, but the majority have suffered alteration in</span> some form, by injected humour, or randomised words which don't look even</div>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                         </div>
                         <div class="quick-list-texts">
                             <div class="quick-list-title"><span class="normal">Quick list </span><span class="bold">of Our <span class="orange">Features</span></div>
-                            <div class="quick-list-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</div>
+                            <div class="quick-list-text">There are many variations of passages of Meil mpruo available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</div>
                             <div class="quick-list-button">
                                 <button>Explore More</button>
                             </div>
@@ -82,27 +82,27 @@
                         <div class="feature-section">
                             <div class="feature-title">Features you will love & enjoy</div>
                             <div class="feature-text">
-                                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                                There are many variations of passages of Meil mpruo available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
                             </div>
                             <div class="feature-card">
                                 <div class="card-title">Dexktop & Mobile Version
                                 </div>
-                                <div class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</div>
+                                <div class="description">There are many variations of passages of Meil mpruo available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</div>
                             </div>
                             <div class="feature-card">
                                 <div class="card-title">Dexktop & Mobile Version
                                 </div>
-                                <div class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</div>
+                                <div class="description">There are many variations of passages of Meil mpruo available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</div>
                             </div>
                             <div class="feature-card">
                                 <div class="card-title">Dexktop & Mobile Version
                                 </div>
-                                <div class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</div>
+                                <div class="description">There are many variations of passages of Meil mpruo available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</div>
                             </div>
                             <div class="feature-card">
                                 <div class="card-title">Dexktop & Mobile Version
                                 </div>
-                                <div class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</div>
+                                <div class="description">There are many variations of passages of Meil mpruo available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</div>
                             </div>
 
                         </div>
@@ -128,7 +128,7 @@
                         <div class="facts-section">
                             <div class="facts-title">Some Facts</div>
                             <div class="facts-text">
-                                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration. </div>
+                                There are many variations of passages of Meil mpruo available, but the majority have suffered alteration. </div>
                         </div>
 
 
@@ -178,7 +178,7 @@
                         <div class="title-section">
                             <div class="title">Our Sponspors</div>
                             <div class="text">
-                                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration. </div>
+                                There are many variations of passages of Meil mpruo available, but the majority have suffered alteration. </div>
                         </div>
                         <div class="logos">
                             <img src="./images/sponsors/amazon.png" alt="">
@@ -201,7 +201,7 @@
                         <div class="title-section">
                             <div class="title">Our Clients</div>
                             <div class="text">
-                                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration. </div>
+                                There are many variations of passages of Meil mpruo available, but the majority have suffered alteration. </div>
                         </div>
                         <div class="clients">
                             <img src="./images/clients/abc.png" alt="">
